--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <link rel="stylesheet" type="text/css" href="CSS/style.css"/>  
 </head>   
 <body>    
-    <h2>Biologics Login</h2><br>    
+    <h1>OKTA</h1><br>    
     <div class="login">    
     <form id="login" method="get" action="login.php">    
         <label><b>User Name     
