--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>    
 <head>    
     <title>okta-dev-3541 Sign In</title>    
-    <link rel="stylesheet" type="text/css" href="css/style.css">    
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">    
 </head> <head>  
-   <link rel="stylesheet" type="text/css" href="css/style.css"/>  
+   <link rel="stylesheet" type="text/css" href="CSS/style.css"/>  
 </head>   
 <body>    
     <center><h1>okta</h1></center><br>    
